--- a/minigames/numeros/repaso contorno1.html
+++ b/minigames/numeros/repaso contorno1.html
@@ -2,14 +2,10 @@
 <html>
  <head>
  <title> Contorno</title>
- </head>
- <style>
-    @font-face
-    {
-    font-family: pipomayu;
-    src: url(./images/pipomayu.TTF);
-    }
-    .principal
+<script type="text/javascript" src="./scripts/script.js"></script>
+ <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
+<style>
+	   .principal
     {   
           background: -webkit-linear-gradient(#9CF, #cc99ff); 
           background: -o-linear-gradient(#9CF, #cc99ff); 
@@ -19,95 +15,30 @@
           width: 20%;
           height:450px;
     }
-	#primer
-	{
-		   margin-left:3%;
-		   float:left;
-	}
-	#segundo
-	{
-		  margin-left:15%;
-		  float:left;
-	}
-	#tercero
-	{
-		 margin-left:70%;
-	}
-    .contenedor
+	.contenedor
     {
         height:227px;
         padding-left:23%;
         padding-top:8%;
     }
-     .invisible1, .invisible2, .invisible3
-    {
-	position: absolute;
-	visibility: hidden;
-	width:111px;
-	cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;
-	}
-	.invisible1{left: 8.1%;}
-	.invisible2{left: 42.7%;}
-	.invisible3{left: 74.4%;}
-	.animal
-	{
-		height:100px;
-		margin-top:30%;
-		margin-left:5%;
-	}
-    body
-    {       
-        font-family:pipomayu;
-        background-image:url(./images/numbers.jpg),url(./images/numbers.jpg);
-        background-repeat:repeat-y;
-        background-position:5%,95%;
-		cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;
-    }
  </style>
- <script>
- var acierto=0, cont=1;
- //rellenamos poco a poco la matriz
- function rellenar(part)
-{          
-		if(cont==part.substr(3))
-        {
-            document.getElementById(part).style.visibility = "visible";
-            cont=cont+1;
-            acierto=acierto+1;
-        }
-		if (acierto==9){
-			document.getElementById('gato').innerHTML="Gato";
-			gatoimg.src="./images/gatocolor.png"
-			}
-		if (acierto==18){
-			document.getElementById('perro').innerHTML="Perro";
-			perroimg.src="./images/perrocolor.png"
-			}
-        if(acierto==27)
-        {
-			document.getElementById('conejo').innerHTML="Conejo";
-			conejoimg.src="./images/conejocolor.png";
-			window.alert("muy bien");
-			acierto=0;
-        }
-}
- </script>
+  </head>
  <body> 
  <p style="text-align:center;font-size:40px;margin-top:1%">Repasa el contorno de uno</p>
  <!-- imagenes del 1 recorrido -->
   <div class="principal" id="primer">
      <div class="contenedor">
-         <IMG SRC="./images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
-         <IMG SRC="./images/uno01.png" ID="ele1" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno02.png" ID="ele2" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno03.png" ID="ele3" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno04.png" ID="ele4" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno05.png" ID="ele5" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno06.png" ID="ele6" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno07.png" ID="ele7" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno08.png" ID="ele8" USEMAP="#uno.png" class="invisible1">
-         <IMG SRC="./images/uno09.png" ID="ele9" USEMAP="#uno.png" class="invisible1">
-             <MAP NAME="uno.png" style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
+         <IMG SRC="./images/uno.png" USEMAP="#uno.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
+         <IMG SRC="./images/contornos/uno01.png" ID="ele1" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno02.png" ID="ele2" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno03.png" ID="ele3" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno04.png" ID="ele4" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno05.png" ID="ele5" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno06.png" ID="ele6" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno07.png" ID="ele7" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno08.png" ID="ele8" USEMAP="#uno.png" class="invisible1">
+         <IMG SRC="./images/contornos/uno09.png" ID="ele9" USEMAP="#uno.png" class="invisible1">
+             <MAP NAME="uno.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
                  <AREA SHAPE=POLY COORDS="17,53,37,82,23,92,9,93,3,88,1,81,0,69,6,64,15,55" OnMouseOver="rellenar('ele1')" >         
                  <AREA SHAPE=POLY COORDS="40,82,61,65,36,38,18,54" OnMouseOver="rellenar('ele2')" >
                  <AREA SHAPE=POLY COORDS="69,64,39,38,72,10" OnMouseOver="rellenar('ele3')">
@@ -120,22 +51,22 @@
             </MAP>
      </div>
 	 <img src="./images/gato.png" class="animal" id="gatoimg"/>
-	  <font id="gato" size="5"></font>
+	  <font id="gato" size="5" style="left:11%;top:58%;position:absolute"></font>
 </div>
  <!-- imagenes del 2 recorrido -->
   <div class="principal" id="segundo">
      <div class="contenedor">
-         <IMG SRC="./images/uno.png" USEMAP="#uno2.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
-         <IMG SRC="./images/uno01.png" ID="ele10" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno02.png" ID="ele11" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno03.png" ID="ele12" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno04.png" ID="ele13" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno05.png" ID="ele14" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno06.png" ID="ele15" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno07.png" ID="ele16" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno08.png" ID="ele17" USEMAP="#uno2.png" class="invisible2">
-         <IMG SRC="./images/uno09.png" ID="ele18" USEMAP="#uno2.png" class="invisible2">
-             <MAP NAME="uno2.png" style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
+         <IMG SRC="./images/uno.png" USEMAP="#uno2.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
+         <IMG SRC="./images/contornos/uno01.png" ID="ele10" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno02.png" ID="ele11" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno03.png" ID="ele12" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno04.png" ID="ele13" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno05.png" ID="ele14" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno06.png" ID="ele15" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno07.png" ID="ele16" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno08.png" ID="ele17" USEMAP="#uno2.png" class="invisible2">
+         <IMG SRC="./images/contornos/uno09.png" ID="ele18" USEMAP="#uno2.png" class="invisible2">
+             <MAP NAME="uno2.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
                  <AREA SHAPE=POLY COORDS="17,53,37,82,23,92,9,93,3,88,1,81,0,69,6,64,15,55" OnMouseOver="rellenar('ele10')" >         
                  <AREA SHAPE=POLY COORDS="40,82,61,65,36,38,18,54" OnMouseOver="rellenar('ele11')" >
                  <AREA SHAPE=POLY COORDS="69,64,39,38,72,10" OnMouseOver="rellenar('ele12')">
@@ -148,22 +79,22 @@
             </MAP>
      </div>
 	 <img src="./images/perro.png" class="animal" id="perroimg"/>
-	 <font id="perro" size="5"></font>
+	 <font id="perro" size="5" style="left:45%;top:58%;position:absolute"></font>
 </div>
  <!-- imagenes del 3 recorrido -->
   <div class="principal" id="tercero">
      <div class="contenedor">
-         <IMG SRC="./images/uno.png" USEMAP="#uno3.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
-         <IMG SRC="./images/uno01.png" ID="ele19" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno02.png" ID="ele20" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno03.png" ID="ele21" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno04.png" ID="ele22" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno05.png" ID="ele23" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno06.png" ID="ele24" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno07.png" ID="ele25" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno08.png" ID="ele26" USEMAP="#uno3.png" class="invisible3">
-         <IMG SRC="./images/uno09.png" ID="ele27" USEMAP="#uno3.png" class="invisible3">
-             <MAP NAME="uno3.png" style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
+         <IMG SRC="./images/uno.png" USEMAP="#uno3.png" WIDTH=111 HEIGHT=227 BORDER=0 style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
+         <IMG SRC="./images/contornos/uno01.png" ID="ele19" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno02.png" ID="ele20" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno03.png" ID="ele21" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno04.png" ID="ele22" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno05.png" ID="ele23" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno06.png" ID="ele24" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno07.png" ID="ele25" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno08.png" ID="ele26" USEMAP="#uno3.png" class="invisible3">
+         <IMG SRC="./images/contornos/uno09.png" ID="ele27" USEMAP="#uno3.png" class="invisible3">
+             <MAP NAME="uno3.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
                  <AREA SHAPE=POLY COORDS="17,53,37,82,23,92,9,93,3,88,1,81,0,69,6,64,15,55" OnMouseOver="rellenar('ele19')" >         
                  <AREA SHAPE=POLY COORDS="40,82,61,65,36,38,18,54" OnMouseOver="rellenar('ele20')" >
                  <AREA SHAPE=POLY COORDS="69,64,39,38,72,10" OnMouseOver="rellenar('ele21')">
@@ -176,7 +107,7 @@
             </MAP>
      </div>
 	 <img src="./images/conejo.png" class="animal" id="conejoimg"/>
-	  <font id="conejo" size="5"></font>
+	  <font id="conejo" size="5" style="left:76%;top:58%;position:absolute"></font>
 </div>
  </body>
 </html>
