--- a/minigames/numeros/cantidadesInverso.html
+++ b/minigames/numeros/cantidadesInverso.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <title> Reconocer cantidades inersamente </title>
+  <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
 <style>
         /*imagenes*/
         .elem
@@ -15,14 +16,6 @@
         #c,#f {left:37%;}
 	    #d, #e{top:10%;} 
 		#f{top:10%;}
-		.opcion
-		{
-			margin:auto;
-			position:absolute;
-			left:26%;
-			top:20%;
-			height:250px;
-		}
         /*contenedores*/
         .opciones
 		{
@@ -68,64 +61,24 @@
 			height:30%;
 			padding-top:15px;
 		}
-		 body
-		{       
-			background-image:url(./images/numbers.jpg),url(./images/numbers.jpg);
-			background-repeat:repeat-y;
-			background-position:5%,95%;
-		}
 </style>
-<script>
-	var ran1,ran2,ran3, elemento;
-     imagenes=new Array();
-	 imagenes[0]="./images/gatocolor.png";
-	 imagenes[1]="./images/cangurocolor.png";
-	 imagenes[2]="./images/conejocolor.png";
-	 imagenes[3]="./images/leoncolor.png";
-	 imagenes[4]="./images/perrocolor.png";
-	 imagenes[5]="./images/pollito.png";	
-	 numeros=new Array();
-	 numeros[0]="./images/uno.png";
-	 numeros[1]="./images/dos.png";
-	 numeros[2]="./images/tres.png";
-	 
-	 //mostramos las imagenes seleccionadas aleatoriamente
-	 function vista()
-	 {
-		a1.src = a2.src = a3.src = a4.src = a5.src = a6.src = imagenes[Math.round(Math.random()*5)];
-		num.src=numeros[Math.round(Math.random()*2)];
-	 }
-	function comprobar(elemento)
-	{
-		if (document.getElementById("num").getAttribute("src") == "./images/tres.png" 
-		&& elemento=="tres" ){ window.alert("CORRECTO"); }
-
-		else if  (document.getElementById("num").getAttribute("src") == "./images/dos.png" 
-		&& elemento=="dos"){ window.alert("CORRECTO"); }
-
-		else if (document.getElementById("num").getAttribute("src") == "./images/uno.png" 
-		&& elemento=="uno"){ window.alert("CORRECTO"); }
-
-		else { window.alert("ERROR"); }
-	}
-</script>
+<script type="text/javascript" src="./scripts/script.js"></script>
  </head>
-
- <body onload="vista()">
+ <body onload="vista1()">
     <div class="opciones" >
            <img src="./images/sero.png" class="opcion" id="num" name="num"/>
     </div>
     <div class="elementos">
-		<div id="tres" onclick="comprobar(this.id)">
+		<div id="tres" onclick="comprobar1(this.id)">
 			<img src="./images/sero.png" class="elem" id="a" name="a1"/>
 			<img src="./images/sero.png" class="elem" id="b" name="a2"/>
 			<img src="./images/sero.png" class="elem" id="c" name="a3"/>
 		</div>
-		<div id="dos" onclick="comprobar(this.id)">
+		<div id="dos" onclick="comprobar1(this.id)">
 			<img src="./images/gato.png" class="elem" id="d" name="a4"/>
 			<img src="./images/gato.png" class="elem" id="e" name="a5"/>
 		</div>
-		<div id="uno" onclick="comprobar(this.id)">
+		<div id="uno" onclick="comprobar1(this.id)">
 			<img src="./images/gato.png" class="elem" id="f" name="a6"/>
 		</div>
      </div>
