--- a/minigames/numeros/contorno1.html
+++ b/minigames/numeros/contorno1.html
@@ -2,13 +2,9 @@
 <html>
  <head>
  <title> Contorno</title>
- </head>
- <style>
-    @font-face
-    {
-    font-family: pipomayu;
-    src: url(./images/pipomayu.TTF);
-    }
+ <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
+ <script type="text/javascript" src="./scripts/script.js"></script>
+ <style type="text/css">
     .principal
     {
           margin-left:17.5%;
@@ -27,57 +23,24 @@
 		margin-bottom:50%;
 		padding-top:1%;
     }
-     .invisible
-    {
-        left: 38.5%;
-        position: absolute;
-        visibility: hidden;
-		cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;
-    }
-    body
-    {       
-        font-family:pipomayu;
-        background-image:url(./images/numbers.jpg),url(./images/numbers.jpg);
-        background-repeat:repeat-y;
-        background-position:5%,95%;
-		cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;
-    }
  </style>
- <script>
- var acierto=0, cont=1;
- //rellenamos poco a poco la matriz
- function rellenar(part)
-{          
-        if(cont==part.substr(3))
-        {
-            document.getElementById(part).style.visibility = "visible";
-            cont=cont+1;
-            acierto=acierto+1;
-        }
-        if(acierto==9)
-        {
-            window.alert("muy bien");
-            acierto=0;
-            return;
-        }
-}
- </script>
+ </head>
  <body>
  <p style="text-align:center;font-size:40px;margin-top:1%">Rellena el recorrido</p>
   <div class="principal"> 
      <div class="contenedor">
      <!-- imagenes del recorrido -->
-         <IMG SRC="./images/uno.png" USEMAP="#uno.png" height=432 BORDER=0 style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;">
-         <IMG SRC="./images/uno01.png" ID="ele1" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno02.png" ID="ele2" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno03.png" ID="ele3" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno04.png" ID="ele4" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno05.png" ID="ele5" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno06.png" ID="ele6" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno07.png" ID="ele7" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno08.png" ID="ele8" USEMAP="#uno.png" class="invisible">
-         <IMG SRC="./images/uno09.png" ID="ele9" USEMAP="#uno.png" class="invisible">
-             <MAP NAME="uno.png" style="position:absolute;cursor: url(./images/paloma.gif),url(./images/paloma.ani),auto;;">
+         <IMG SRC="./images/uno.png" USEMAP="#uno.png" height=432 BORDER=0 style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;">
+         <IMG SRC="./images/contornos/uno01.png" ID="ele1" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno02.png" ID="ele2" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno03.png" ID="ele3" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno04.png" ID="ele4" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno05.png" ID="ele5" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno06.png" ID="ele6" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno07.png" ID="ele7" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno08.png" ID="ele8" USEMAP="#uno.png" class="invisible">
+         <IMG SRC="./images/contornos/uno09.png" ID="ele9" USEMAP="#uno.png" class="invisible">
+             <MAP NAME="uno.png" style="position:absolute;cursor: url(./images/estilo/paloma.gif),url(./images/paloma.ani),auto;;">
 <AREA SHAPE=POLY COORDS="40,97,81,151,49,171,27,178,12,170,1,152,4,130,29,108,38,99" OnMouseOver="rellenar('ele1')" >         
 <AREA SHAPE=POLY COORDS="81,150,127,112,76,68,42,98" OnMouseOver="rellenar('ele2')" >
 <AREA SHAPE=POLY COORDS="127,113,76,69,129,31" OnMouseOver="rellenar('ele3')">
