New folder called numeros2

--- a/minigames/numeros/repaso contorno3.html
+++ b/minigames/numeros/repaso contorno3.html
@@ -24,7 +24,7 @@
 <script type="text/javascript" src="./scripts/script.js"></script>
   </head>
  <body> 
- <p style="text-align:center;font-size:40px;margin-top:1%">Repasa el contorno de dos</p>
+ <p style="text-align:center;font-size:40px;margin-top:1%">Repasa el contorno de tres</p>
  <!-- imagenes del 1 recorrido -->
   <div class="principal" id="primer">
      <div class="contenedor">
