--- a/minigames/numeros2/reconocerCantidades1.html
+++ b/minigames/numeros2/reconocerCantidades1.html
@@ -15,23 +15,20 @@
 	}
   </style>
   <script>
-	 respuesta=new Array();
-	 respuesta[0]="3";
-	 respuesta[1]="3";
-	 respuesta[2]="1";
-	 respuesta[3]="2";
-	 respuesta[4]="1";
+	 respuesta=["3","3","1","2","1"];
 	 var aciertos=0;
-	 function comprobar(ident,part, imagen)
+	 function comprobar(obj)
 	 {
-		 if (respuesta[part.substr(3)]==ident && aciertos==part.substr(3))
+		 var part = obj.id.substr(3);
+		 var ident = obj.value;
+		if (respuesta[part]==ident && aciertos==part)
 		 {
-			 imagen.name.src="./images/tiki.png";
-			 aciertos=aciertos+1;
+             document.getElementById("img"+part).setAttribute("src","./images/tiki.png");
+             aciertos++;
 		 }
-		 else if(respuesta[part.substr(3)]!=ident && aciertos==part.substr(3))
+		 else if(respuesta[part]!=ident && aciertos==part)
 		 {
-		 	 imagen.name.src="./images/nono.png";
+		 	 document.getElementById("img"+part).setAttribute("src","./images/nono.png");
 		 }
 	 }
   </script>
@@ -43,23 +40,23 @@
   <table style="position:relative; margin-left:55%;width:30%" cellspacing="20" >
   <tr>
 	<td><img src="./images/bandera.png"/></td>
-	<td><input type="text" class="respuesta" size="1"  maxlength="1" id="cam0" onblur="comprobar(this.value, this.id, 'img0')" value="" /> <img src="./images/sero.png" name="img0" width="50"/></td>
+	<td><input type="text" class="respuesta" size="1"  maxlength="1" id="cam0" onblur="comprobar(this)" value="" /> <img src="./images/sero.png" id="img0" width="50"/></td>
   </tr>
   <tr>
 	<td><img src="./images/bici.png"/></td>
-	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam1"  onblur="comprobar(this.value, this.id, 'img1')" value=""/> <img src="./images/sero.png" name="img1" width="50"/></td>
+	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam1"  onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img1" width="50"/></td>
   </tr>
   <tr>
 	<td><img src="./images/coche.png"/></td>
-	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam2"  onblur="comprobar(this.value, this.id , 'img2')" value=""/> <img src="./images/sero.png" name="img2" width="50"/></td>
+	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam2"  onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img2" width="50"/></td>
   </tr>
   <tr>
 	<td><img src="./images/moto.png"/></td>
-	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam3" onblur="comprobar(this.value, this.id , 'img3')" value=""/> <img src="./images/sero.png" name="img3" width="50"/></td>
+	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam3" onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img3" width="50"/></td>
   </tr>
    <tr>
 	<td><img src="./images/policia.png"/></td>
-	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam4" onblur="comprobar(this.value, this.id, 'img4')" value=""/> <img src="./images/sero.png" name="img4" width="50"/></td>
+	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam4" onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img4" width="50"/></td>
   </tr>
   </table>
  </body>
