--- a/minigames/numeros2/reconocerCantidades2.html
+++ b/minigames/numeros2/reconocerCantidades2.html
@@ -15,7 +15,7 @@
 	}
   </style>
   <script>
-	 respuesta=["3","3","1","2","1"];
+	 respuesta=["3","5","1","5","2","6"];
 	 var aciertos=0;
 	 function comprobar(obj)
 	 {
@@ -30,7 +30,7 @@
 		 {
 		 	 document.getElementById("img"+part).setAttribute("src","./images/nono.png");
 		 }
-		 if (aciertos==5)
+		 if (aciertos==6)
 		 {
 			 window.alert("muy bien!");
 			 aciertos=0;
@@ -41,27 +41,31 @@
 
  <body>
   <p style="text-align:center;font-size:30px;margin-top:1%">¿Cu&aacute;ntos hay de cada uno?</p>
-  <img src="./images/fondo01.png" style="margin:auto; width:650px;border:solid;border-radius:20px;border-color:#ccccff;float:left;position:relative"/>
-  <table style="position:relative; margin-left:55%;width:30%" cellspacing="20" >
+  <img src="./images/fondo02.png" style="margin:auto; height:500px;border:solid;border-radius:20px;border-color:#ccccff;float:left;position:relative; margin-left:10%"/>
+  <table style="position:relative; margin-left:55%;width:30%" cellspacing="2" >
   <tr>
-	<td><img src="./images/bandera.png"/></td>
+	<td><img src="./images/arbol.png" height=100/></td>
 	<td><input type="text" class="respuesta" size="1"  maxlength="1" id="cam0" onblur="comprobar(this)" value="" /> <img src="./images/sero.png" id="img0" width="50"/></td>
   </tr>
   <tr>
-	<td><img src="./images/bici.png"/></td>
+	<td><img src="./images/ardilla.png" height=75/></td>
 	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam1"  onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img1" width="50"/></td>
   </tr>
   <tr>
-	<td><img src="./images/coche.png"/></td>
+	<td><img src="./images/caballo.png" height=75/></td>
 	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam2"  onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img2" width="50"/></td>
   </tr>
   <tr>
-	<td><img src="./images/moto.png"/></td>
+	<td><img src="./images/flor.png" height=75/></td>
 	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam3" onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img3" width="50"/></td>
   </tr>
    <tr>
-	<td><img src="./images/policia.png"/></td>
+	<td><img src="./images/jirafa.png" height=75/></td>
 	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam4" onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img4" width="50"/></td>
+  </tr>
+   <tr>
+	<td><img src="./images/pajaro.png" width=100/></td>
+	<td><input type="text" class="respuesta" size="1" maxlength="1" id="cam5" onblur="comprobar(this)" value=""/> <img src="./images/sero.png" id="img5" width="50"/></td>
   </tr>
   </table>
  </body>
