--- a/Habitos/animalesSelva.html
+++ b/Habitos/animalesSelva.html
@@ -37,7 +37,7 @@ function pintar(obj)
 
 
     </HEAD>
-<body bgcolor="#990000">
+<body bgcolor="#ffffff">
 
  <div class="cabezera">
 		<div class="titulo"><img src="imagenes/La Selva.gif" ></div>
