--- a/Habitos/elBano.html
+++ b/Habitos/elBano.html
@@ -41,7 +41,7 @@ function pintar(obj)
 
 
     </HEAD>
-<body bgcolor="yellow">
+<body bgcolor="#ffffff">
 
  <div class="cabezera">
 		<div class="titulo"><img src="imagenes/El Baño.gif" img></div>
