--- a/Habitos/laCara.html
+++ b/Habitos/laCara.html
@@ -42,7 +42,7 @@ function pintar(obj)
 
 
     </HEAD>
-<body bgcolor="#cccc00">
+<body bgcolor="#ffffff">
 
  <div class="cabezera">
 		<div class="titulo"><img src="imagenes/La Cara.gif" img></div>
