--- a/Habitos/lasProfesiones.html
+++ b/Habitos/lasProfesiones.html
@@ -41,7 +41,7 @@ function pintar(obj)
 
 
     </HEAD>
-<body bgcolor="#00ff00">
+<body bgcolor="#ffffff">
 
  <div class="cabezera">
 		<div class="titulo"><img src="imagenes/LasProfesiones.gif" img></div>
