--- a/Habitos/losTransportes.html
+++ b/Habitos/losTransportes.html
@@ -41,7 +41,7 @@ function pintar(obj)
 
 
     </HEAD>
-<body bgcolor="#ff9900">
+<body bgcolor="#ffffff">
 
  <div class="cabezera">
 		 <div class="titulo"><img src="imagenes/losTransportes.gif" img></div> 
